Remove lazy loading

--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
 		<h1>Hout</h1>
 		<h2>Houtsnijwerk</h2>
 		<div class="grid-container">
-			<img src="static/IMG_7939.jpg" loading="lazy" alt="houten paard" />
-			<img src="static/IMG_7938.jpg" loading="lazy" alt="houten paard" />
-			<img src="static/IMG_7940.jpg" loading="lazy" alt="houten eland" />
-			<img src="static/IMG_7942.jpg" loading="lazy" alt="houten eland" />
-			<img src="static/IMG_7944.jpg" loading="lazy" alt="houten judo techniek" />
+			<img src="static/IMG_7939.jpg" alt="houten paard" />
+			<img src="static/IMG_7938.jpg" alt="houten paard" />
+			<img src="static/IMG_7940.jpg" alt="houten eland" />
+			<img src="static/IMG_7942.jpg" alt="houten eland" />
+			<img src="static/IMG_7944.jpg" alt="houten judo techniek" />
 	
-			<img src="static/IMG_2633.jpg" loading="lazy" alt="houten eekhoorn" />
+			<img src="static/IMG_2633.jpg" alt="houten eekhoorn" />
 		</div>
 		<h2>Overig</h2>
 		<div class="grid-container">
-			<img src="static/IMG_2635.jpg" loading="lazy" alt="houten hamer" />
-			<img src="static/IMG_2638.jpg" loading="lazy" alt="houten krukje" />
+			<img src="static/IMG_2635.jpg" alt="houten hamer" />
+			<img src="static/IMG_2638.jpg" alt="houten krukje" />
 		</div>
 	</main>
 </body>
