Fix image names

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 			<img src="static/IMG_7942.jpg" alt="houten eland" />
 			<img src="static/IMG_7944.jpg" alt="houten judo techniek" />
 	
-			<img src="static/IMG_2633.jpg" alt="houten eekhoorn" />
+			<img src="static/IMG_2633.JPG" alt="houten eekhoorn" />
 		</div>
 		<h2>Overig</h2>
 		<div class="grid-container">
-			<img src="static/IMG_2635.jpg" alt="houten hamer" />
-			<img src="static/IMG_2638.jpg" alt="houten krukje" />
+			<img src="static/IMG_2635.JPG" alt="houten hamer" />
+			<img src="static/IMG_2638.JPG" alt="houten krukje" />
 		</div>
 	</main>
 </body>
