Add lazy loading

--- a/index.html
+++ b/index.html
@@ -5,33 +5,29 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link href="base.css" rel="stylesheet"/>
+	<link href="static/css/base.css" rel="stylesheet" />
 </head>
 <body>
-	<main>
-		<nav>
-			<!-- <a href="">winkel</a> -->
-			<span> | </span>
-			<a href="mailto:hauke222222@gmail.com">e-mail</a>
-		</nav>
-		<h1>Hout</h1>
-		<h2>Houtsnijwerk</h2>
-		<div class="grid-container">
-			<img src="static/IMG_7939.jpg" alt="houten paard" />
-			<img src="static/IMG_7938.jpg" alt="houten paard" />
-			<img src="static/IMG_7940.jpg" alt="houten eland" />
-			<img src="static/IMG_7942.jpg" alt="houten eland" />
-			<img src="static/IMG_7944.jpg" alt="houten judo techniek" />
-	
-			<img src="static/IMG_2633.JPG" alt="houten eekhoorn" />
-		</div>
-		<h2>Overig</h2>
-		<div class="grid-container">
-			<img src="static/IMG_2635.JPG" alt="houten hamer" />
-			<img src="static/IMG_2638.JPG" alt="houten krukje" />
-		</div>
-	</main>
+	<nav>
+		<!-- <a href="">winkel</a> -->
+		<span> | </span>
+		<a href="mailto:hauke222222@gmail.com">e-mail</a>
+	</nav>
+	<h1>Hout</h1>
+	<h2>Houtsnijwerk</h2>
+	<div class="grid-container">
+		<img src="static/images/IMG_7939.jpg" loading="lazy" alt="houten paard" />
+		<img src="static/images/IMG_7938.jpg" loading="lazy" alt="houten paard" />
+		<img src="static/images/IMG_7940.jpg" loading="lazy" alt="houten eland" />
+		<img src="static/images/IMG_7942.jpg" loading="lazy" alt="houten eland" />
+		<img src="static/images/IMG_7944.jpg" loading="lazy" alt="houten judo techniek" />
+		<img src="static/images/IMG_2633.JPG" loading="lazy" alt="houten eekhoorn" />
+	</div>
+	<h2>Overig</h2>
+	<div class="grid-container">
+		<img src="static/images/IMG_2635.JPG" loading="lazy" alt="houten hamer" />
+		<img src="static/images/IMG_2638.JPG" loading="lazy" alt="houten krukje" />
+	</div>
 </body>
+
 </html>
-
-
