--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 		<img src="static/images/IMG_7940.jpg" loading="lazy" alt="houten eland" />
 		<img src="static/images/IMG_7942.jpg" loading="lazy" alt="houten eland" />
 		<img src="static/images/IMG_2633.JPG" loading="lazy" alt="houten eekhoorn" />
-		<img src="static/images/IMG_2662.jpg" loading="lazy" alt="houten judo techniek" />	
+		<img src="static/images/IMG_2667.jpg" loading="lazy" alt="houten judo techniek" />	
 	</div>
-	<h2>Overig</h2>
+	<!-- <h2>Overig</h2>
 	<div class="grid-container">
 		<img src="static/images/IMG_2635.JPG" loading="lazy" alt="houten hamer" />
 		<img src="static/images/IMG_2638.JPG" loading="lazy" alt="houten krukje" />
-	</div>
+	</div> -->
 </body>
 
 </html>
