--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 		<img src="static/images/IMG_7938.jpg" loading="lazy" alt="houten paard" />
 		<img src="static/images/IMG_7940.jpg" loading="lazy" alt="houten eland" />
 		<img src="static/images/IMG_7942.jpg" loading="lazy" alt="houten eland" />
+		<img src="static/images/IMG_2689_1.jpg" loading="lazy" alt="houten draak" />	
+		<img src="static/images/IMG_2662.jpg" loading="lazy" alt="houten judo techniek" />	
 		<img src="static/images/IMG_2633.JPG" loading="lazy" alt="houten eekhoorn" />
-		<img src="static/images/IMG_2667.jpg" loading="lazy" alt="houten judo techniek" />	
+
 	</div>
 	<!-- <h2>Overig</h2>
 	<div class="grid-container">
