--- a/index.html
+++ b/index.html
@@ -23,15 +23,28 @@
 			<figcaption>Houten draak</figcaption>
 		  </figure>
 
-		  <figure>
+		  <!-- <figure>
 			<img src="static/images/IMG_8001.jpg" loading="lazy" alt="houten paard" />
 			<figcaption>Houten engel</figcaption>
-		  </figure>
+		  </figure> -->
+
+		  <figure>
+			<img src="static/images/IMG_2766_01.jpg" alt="houten bloem" loading="lazy">
+			<figcaption>Houten bloem</figcaption>
+		</figure>
 
 		<figure>
-			<img src="static/images/IMG_7939.jpg" loading="lazy" alt="houten paard" />
-			<figcaption>Houten paard</figcaption>
-		  </figure>
+			<img src="static/images/IMG_2756.jpg" alt="houten zon" loading="lazy">
+			<figcaption>Houten zon</figcaption>
+		</figure>
+
+
+		  <figure>
+			<img src="static/images/IMG_2765.jpg" alt="houten kat" loading="lazy">
+			<figcaption>Houten kat</figcaption>
+		</figure>
+
+
 		  
 		  <figure>
 			<img src="static/images/IMG_7942.jpg" loading="lazy" alt="houten eland" />
