--- a/index.html
+++ b/index.html
@@ -74,11 +74,26 @@
 		</figure>
 
 	</div>
-	<!-- <h2>Overig</h2>
+	<br>
+	<h2>School werkstukken</h2>
 	<div class="grid-container">
-		<img src="static/images/IMG_2635.JPG" loading="lazy" alt="houten hamer" />
-		<img src="static/images/IMG_2638.JPG" loading="lazy" alt="houten krukje" />
-	</div> -->
+		<figure>
+			<img src="static/images/IMG_0492.jpeg" loading="lazy" alt="Houten kano" />
+			<figcaption>Houten kano</figcaption>
+		</figure>
+		<figure>
+			<img src="static/images/IMG_0495.jpeg" loading="lazy" alt="Houten kano" />
+			<figcaption>Houten kano</figcaption>
+		</figure>
+		<figure>
+			<img src="static/images/IMG_0500.jpeg" loading="lazy" alt="houten krukje" />
+			<figcaption>Houten krukje</figcaption>
+		</figure>
+		<figure>
+			<img src="static/images/IMG_0498.jpeg" loading="lazy" alt="houten krukje" />
+			<figcaption>Houten krukje</figcaption>
+		</figure>
+	</div>
 </body>
 
 </html>
