--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 		<figure>
 			<img src="static/images/IMG_2765.jpg" alt="houten kat" loading="lazy">
-			<figcaption>Houten kat</figcaption>
+			<figcaption>Houten katachtige</figcaption>
 		</figure>
 
 		<figure>
