--- a/index.html
+++ b/index.html
@@ -24,11 +24,17 @@
 			<figcaption>Houten draak</figcaption>
 		</figure>
 
+		
+		<figure>
+			<img src="static/images/IMG_2852.JPG" loading="lazy" alt="houten viskom" />
+			<figcaption>Houten viskom</figcaption>
+		</figure>
+
 		<figure>
 			<img src="static/images/IMG_2766_01.jpg" alt="houten bloem" loading="lazy">
 			<figcaption>Houten bloem</figcaption>
 		</figure>
-
+		
 		<figure>
 			<img src="static/images/IMG_2756.jpg" alt="houten zon" loading="lazy">
 			<figcaption>Houten zon</figcaption>
