--- a/index.html
+++ b/index.html
@@ -96,8 +96,12 @@
 			<figcaption>Houten krukje</figcaption>
 		</figure>
 		<figure>
-			<img src="static/images/IMG_0498.jpeg" loading="lazy" alt="houten krukje" />
-			<figcaption>Houten krukje</figcaption>
+			<img src="static/images/IMG_2877.jpg" loading="lazy" alt="houten krukje" />
+			<figcaption>Metalen schaaltje</figcaption>
+		</figure>
+		<figure>
+			<img src="static/images/IMG_2871.jpg" loading="lazy" alt="houten krukje" />
+			<figcaption>Smeed werk</figcaption>
 		</figure>
 	</div>
 </body>
