--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 			<figcaption>Houten engel</figcaption>
 		  </figure> -->
 
-		<figure>
-			<img src="static/images/IMG_2765.jpg" alt="houten kat" loading="lazy">
-			<figcaption>Houten katachtige</figcaption>
+		  <figure>
+			<img src="static/images/IMG_2819.jpg" loading="lazy" alt="houten eekhoorn" />
+			<figcaption>Houten eekhoorn</figcaption>
 		</figure>
 
 		<figure>
@@ -70,8 +70,8 @@
 		</figure>
 
 		<figure>
-			<img src="static/images/IMG_2633.JPG" loading="lazy" alt="houten eekhoorn" />
-			<figcaption>Houten eekhoorn</figcaption>
+			<img src="static/images/IMG_2765.jpg" alt="houten kat" loading="lazy">
+			<figcaption>Houten katachtige</figcaption>
 		</figure>
 
 		<figure>
@@ -96,11 +96,11 @@
 			<figcaption>Houten krukje</figcaption>
 		</figure>
 		<figure>
-			<img src="static/images/IMG_2877.jpg" loading="lazy" alt="houten krukje" />
+			<img src="static/images/IMG_2877.jpg" loading="lazy" alt="metalen schaaltje" />
 			<figcaption>Metalen schaaltje</figcaption>
 		</figure>
 		<figure>
-			<img src="static/images/IMG_2871.jpg" loading="lazy" alt="houten krukje" />
+			<img src="static/images/IMG_2871.jpg" loading="lazy" alt="smeed werk" />
 			<figcaption>Smeed werk</figcaption>
 		</figure>
 	</div>
