--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@
 	<div class="grid-container">
 
 		<figure>
+			<img src="static/images/IMG_3071-EDIT.jpg" loading="lazy" alt="houten narcis" />
+			<figcaption>Houten narcis</figcaption>
+		</figure>
+
+		<figure>
+			<img src="static/images/IMG_3082.jpg" loading="lazy" alt="houten thee kopje" />
+			<figcaption>Houten thee kopje</figcaption>
+		</figure>
+		
+		<figure>
+			<img src="static/images/IMG_2960-1.jpg" loading="lazy" alt="Houten calla lelie" />
+			<figcaption>Houten calla lelie</figcaption>
+		</figure>
+
+		<figure>
 			<img src="static/images/IMG_2689_1.jpg" loading="lazy" alt="houten draak" />
 			<figcaption>Houten draak</figcaption>
 		</figure>
