--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
 	<div class="grid-container">
 
 		<figure>
+			<img src="static/images/IMG_3136-1.jpg" loading="lazy" alt="Jezus en Maria" />
+			<figcaption>Jezus en Maria</figcaption>
+		</figure>
+
+		<figure>
+			<img src="static/images/IMG_3130.jpg" loading="lazy" alt="Bloemen" />
+			<figcaption>Bloemen</figcaption>
+		</figure>
+
+		<figure>
 			<img src="static/images/IMG_3071-EDIT.jpg" loading="lazy" alt="houten narcis" />
 			<figcaption>Houten narcis</figcaption>
 		</figure>
@@ -70,11 +80,6 @@
 		</figure>
 
 		<figure>
-			<img src="static/images/IMG_7942.jpg" loading="lazy" alt="houten eland" />
-			<figcaption>Houten eland</figcaption>
-		</figure>
-
-		<figure>
 			<img src="static/images/IMG_7938.jpg" loading="lazy" alt="houten paard" />
 			<figcaption>Houten paard</figcaption>
 		</figure>
@@ -86,12 +91,12 @@
 
 		<figure>
 			<img src="static/images/IMG_2765.jpg" alt="houten kat" loading="lazy">
-			<figcaption>Houten katachtige</figcaption>
+			<figcaption>Houten kat</figcaption>
 		</figure>
 
 		<figure>
-			<img src="static/images/IMG_2662.jpg" loading="lazy" alt="houten judo techniek" />
-			<figcaption>Houten judo techniek</figcaption>
+			<img src="static/images/P_20230228_122116.jpg" loading="lazy" alt="houten judo techniek" />
+			<figcaption>judo techniek</figcaption>
 		</figure>
 
 	</div>
