--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 		<figure>
 			<img src="static/images/IMG_3136-1.jpg" loading="lazy" alt="Jezus en Maria" />
-			<figcaption>Jezus en Maria</figcaption>
+			<figcaption>Jezus met Maria</figcaption>
 		</figure>
 
 		<figure>
