--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 	<div class="grid-container">
 
 		<figure>
+			<img src="static/images/IMG_3172.jpg" loading="lazy" alt="Kaars met hulst bladen" />
+			<figcaption>Kaars met hulst bladen</figcaption>
+		</figure>
+
+		<figure>
 			<img src="static/images/IMG_3136-1.jpg" loading="lazy" alt="Jezus en Maria" />
 			<figcaption>Jezus met Maria</figcaption>
 		</figure>
