--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
 	<div class="grid-container">
 
 		<figure>
+			<img src="static/images/IMG_3230.jpg" loading="lazy" alt="Eiken takje" />
+			<figcaption>Eiken takje</figcaption>
+		</figure>
+
+
+		<figure>
 			<img src="static/images/IMG_3172.jpg" loading="lazy" alt="Kaars met hulst bladen" />
 			<figcaption>Kaars met hulst bladen</figcaption>
 		</figure>
