--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
 	<div class="grid-container">
 
 		<figure>
+			<img src="static/images/IMG_3313.jpg" loading="lazy" alt="Acantus rozet" />
+			<figcaption>Acanthus rozet</figcaption>
+		</figure>
+
+
+		<figure>
+			<img src="static/images/IMG_3306.jpg" loading="lazy" alt="Grieks acantusblad" />
+			<figcaption>Grieks acantusblad</figcaption>
+		</figure>
+
+		<figure>
 			<img src="static/images/IMG_3230.jpg" loading="lazy" alt="Eiken takje" />
 			<figcaption>Eiken takje</figcaption>
 		</figure>
